removed grid bug on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,9 +90,9 @@
     @apply font-semibold dark:text-white/100 text-black/100;
   }
   .layout {
-    @apply grid md:grid-cols-[1fr,300px] gap-20 contain section;
+    @apply md:grid md:grid-cols-[1fr,300px] gap-20 contain section;
   }
   .article {
-    @apply mx-auto prose-base sm:mx-0 sm:prose-lg md:prose-xl xl:prose-2xl max-w-prose;
+    @apply w-full prose-base sm:mx-0 sm:prose-lg md:prose-xl xl:prose-2xl md:max-w-prose;
   }
 }
